Pushing pressure on some long-running operations from CPU-intensive to GC-intensive which should help with larger rollup runs. Using a sample set of 14 rollups with 4000 records (twice the theoretical max that could be done in a batch full recalc with chunk size of 2000), the rollup evaluator where clause cache ended up taking up nearly 1 MB of heap size. For smaller operations (6 rollups on 400 records), that same cached map took up 41 KB instead. We'll call this a heap size experiment and adjust/remove the functionality if it isn't helping larger rollup operations.

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -74,7 +74,7 @@ global without sharing virtual class Rollup {
   }
 
   @TestVisible
-  private static final List<Rollup> CACHED_ROLLUPS {
+  private static List<Rollup> CACHED_ROLLUPS {
     get {
       if (CACHED_ROLLUPS == null) {
         CACHED_ROLLUPS = new List<Rollup>();
@@ -251,7 +251,7 @@ global without sharing virtual class Rollup {
   }
 
   public class CalcItemBag {
-    private final Map<String, SObject> idToCalcItem = new Map<String, SObject>();
+    private Map<String, SObject> idToCalcItem = new Map<String, SObject>();
     private Boolean hasBeenCleared = false;
     public Boolean hasQueriedForAdditionalItems = false;
     public CalcItemBag(List<SObject> calcItems) {
@@ -270,7 +270,7 @@ global without sharing virtual class Rollup {
 
     public void clear() {
       if (this.hasBeenCleared == false) {
-        this.idToCalcItem.clear();
+        this.idToCalcItem = new Map<String, SObject>();
         this.hasBeenCleared = true;
       }
     }
@@ -1628,7 +1628,7 @@ global without sharing virtual class Rollup {
   global static Rollup runFromApex(List<Rollup__mdt> localMetas, Evaluator eval, List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
     Rollup rollupConductor = RollupAsyncProcessor.getConductor(InvocationPoint.FROM_APEX, calcItems, oldCalcItems);
     if (shouldRunFromTrigger() == false || localMetas.isEmpty()) {
-      rollupConductor.calcItems?.clear();
+      rollupConductor.calcItems = new List<SObject>();
       return rollupConductor;
     }
 
@@ -1728,7 +1728,7 @@ global without sharing virtual class Rollup {
   public static void processStoredFlowRollups() {
     flatten(CACHED_ROLLUPS);
     List<Rollup> rollupsToProcess = new List<Rollup>(CACHED_ROLLUPS);
-    CACHED_ROLLUPS.clear();
+    CACHED_ROLLUPS = null;
     batch(rollupsToProcess, InvocationPoint.FROM_INVOCABLE);
   }
 
@@ -2222,6 +2222,7 @@ global without sharing virtual class Rollup {
       Integer currentCount = new RollupRepository(RollupMetaPicklists.getAccessLevel(meta))
         .setQuery(RollupQueryBuilder.Current.getQuery(childType, new List<String>(), meta.LookupFieldOnLookupObject__c, '!=', whereClause))
         .setArg(new Set<String>())
+        .setArg('recordIds', metaWrapper.recordIds)
         .getCount();
       metaWrapper.recordCount = currentCount == RollupRepository.SENTINEL_COUNT_VALUE ? currentCount : metaWrapper.recordCount + currentCount;
     }
