--- a/rollup/core/classes/RollupCurrencyInfo.cls
+++ b/rollup/core/classes/RollupCurrencyInfo.cls
@@ -19,8 +19,6 @@ public without sharing virtual class RollupCurrencyInfo {
     'OpportunitySplit' => new List<String>{ 'OpportunityId', 'CloseDate' } // yikes
   };
 
-  private static final Map<String, RollupCurrencyInfo> CURRENCY_ISO_CODE_TO_CURRENCY = getCurrencyMap();
-
   @TestVisible
   private static Boolean IS_MULTICURRENCY {
     get {
@@ -51,6 +49,16 @@ public without sharing virtual class RollupCurrencyInfo {
         FALLBACK_INFO.ConversionRate = 1;
       }
       return FALLBACK_INFO;
+    }
+    set;
+  }
+
+  private static final Map<String, RollupCurrencyInfo> CURRENCY_ISO_CODE_TO_CURRENCY {
+    get {
+      if (CURRENCY_ISO_CODE_TO_CURRENCY == null) {
+        CURRENCY_ISO_CODE_TO_CURRENCY = getCurrencyMap();
+      }
+      return CURRENCY_ISO_CODE_TO_CURRENCY;
     }
     set;
   }
@@ -110,8 +118,8 @@ public without sharing virtual class RollupCurrencyInfo {
   }
 
   private static void loadProperMinMaxDates(List<SObject> calcItems) {
-    if (hasLoadedDatedCurrencyInfo || IS_DATED_MULTICURRENCY == false) {
-      return;
+    if (hasLoadedDatedCurrencyInfo || IS_DATED_MULTICURRENCY == false || CURRENCY_ISO_CODE_TO_CURRENCY == null) {
+      return; // prettier-ignore                                         👆 forces getter to run, if it hasn't already
     }
     hasLoadedDatedCurrencyInfo = true;
     for (SObject calcItem : calcItems) {
